src/OpenCvSharpExtern/optflow.h

CVAPI(ExceptionStatus) optflow_calcOpticalFlowSF1(
    const interop::InputArrayProxy* from,
    const interop::InputArrayProxy* to,
    const interop::OutputArrayProxy* flow,
    int layers,
    int averagingBlockSize,
    int maxFlow)
{
    return cvTry([&] {
        cv::optflow::calcOpticalFlowSF(InProxy(*from), InProxy(*to), OutProxy(*flow), layers, averagingBlockSize, maxFlow);
    });
}
CVAPI(ExceptionStatus) optflow_calcOpticalFlowSF2(
    const interop::InputArrayProxy* from,
    const interop::InputArrayProxy* to,
    const interop::OutputArrayProxy* flow,
    int layers,
    int averagingBlockSize,
    int maxFlow,
    double sigmaDist,
    double sigmaColor,
    int postprocessWindow,
    double sigmaDistFix,
    double sigmaColorFix,
    double occThr,
    int upscaleAveragingRadius,
    double upscaleSigmaDist,
    double upscaleSigmaColor,
    double speedUpThr)
{
    return cvTry([&] {
        cv::optflow::calcOpticalFlowSF(InProxy(*from), InProxy(*to), OutProxy(*flow), layers, averagingBlockSize, maxFlow,
            sigmaDist, sigmaColor, postprocessWindow, sigmaDistFix, sigmaColorFix,
            occThr, upscaleAveragingRadius, upscaleSigmaDist, upscaleSigmaColor, speedUpThr);
    });
}